--- a/base/static/common.css
+++ b/base/static/common.css
@@ -19,14 +19,18 @@
   z-index: -50;
 }
 
+.t-float-left {
+  float: left;
+}
+
 .t-my-\[0px\] {
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-.t-mx-0 {
-  margin-left: 0px;
-  margin-right: 0px;
+.t-mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .t-mt-\[30px\] {
@@ -75,14 +79,6 @@
 
 .t-w-full {
   width: 100%;
-}
-
-.t-w-1\/5 {
-  width: 20%;
-}
-
-.t-w-4\/5 {
-  width: 80%;
 }
 
 .t-w-11\/12 {
@@ -146,21 +142,6 @@
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.t-bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.t-bg-pink-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
-}
-
-.t-bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
 .t-object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -188,18 +169,13 @@
   font-size: 20px;
 }
 
-.t-text-\[1\.2rem\] {
-  font-size: 1.2rem;
-}
-
 .t-text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.t-text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.t-text-\[1\.2rem\] {
+  font-size: 1.2rem;
 }
 
 .t-font-bold {
@@ -210,19 +186,14 @@
   font-style: italic;
 }
 
-.t-text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 .t-text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.t-text-gray-500 {
+.t-text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .t-no-underline {
