--- a/cart/templates/cart/cart_list.html
+++ b/cart/templates/cart/cart_list.html
@@ -12,8 +12,8 @@
 
                 <form action="#" method="POST">
                     {% csrf_token %}
-                    <div class="t-w-1/12 t-px-0 t-text-xl t-items-end t-whitespace-nowrap"><a href="#"
-                                                                                              class="t-text-black t-no-underline"><i
+                    <div class="t-font-bold t-px-0 t-text-xl t-items-end t-whitespace-nowrap"><a href="#"
+                                                                                                 class="t-text-black t-no-underline"><i
                             class="far fa-trash-alt"></i>삭제</a></div>
                 </form>
 
@@ -30,34 +30,71 @@
                         <th>가격</th>
                         </thead>
                         <tbody>
-                        {% for item in add %}
+                        {% for cart_item in cart_items %}
                         <tr>
                             <td>
-                                {{ item.product.name }}
-                                <ul>
-                                    {% for variation in item.variations.all %}
-                                    <li>{{ variation.title }}</li>
-                                    {% endfor %}
-                                </ul>
+                                <a href="{{ cart_item.product.get_absolute_url }}" class="t-float-left t-rounded"><img
+                                        src="{{product.thumb_img_url}}"
+                                        alt=""></a>
                             </td>
 
-                            <td>{{ item.quantity }}</td>
-                            <td>${{ item.product.price }}</td>
                             <td>
-
+                                {{ cart_item.product.name }}
+                                <br>
+                                SKU: {{cart_item.product.id}}
+                                <br>
+                                가격 : \{{ cart_item.product.price }}
+                                <br>
+                                수량 : {{cart_item.quantity}} x A\{{ cart_item.product.price }}
                             </td>
+                            <td>
+                                A\{{ cart_item.sub_total }}
+                            </td>
+                            {% if cart_item.quantity <= cart_item.product.stock %}
+                            <td>
+                                <a href="{% url 'cart:add' cart_item.product.id %}" class=""><i
+                                        class="fas fa-plus-circle custom_icon"></i></a>&nbsp;
+                                <a href=""><i class="fas fa-minus-circle custom_icon"></i></a>&nbsp;
+                                <a href=""><i class="far fa-trash-alt"></i></a>
+                            </td>
+
+                            {% else %}
+                            <td>
+                                &nbsp;<a href="" class=""><i class="fas fa-minus-circle custom_icon"></i></a>&nbsp;
+                                <a href=""><i class="far fa-trash-alt"></i></a>
+                            </td>
+                            {% endif %}
                         </tr>
                         {% endfor %}
                         </tbody>
-                        <tfoot>
-                        <tr>
-                            <td>총합</td>
-                            <td></td>
-                            <td>\</td>
-                            <td></td>
-                        </tr>
-                        </tfoot>
                     </table>
+                <div class="">
+                    <table class="table">
+                        <thread class="">
+                            <tr>
+                                <th>
+                                    총합
+                                </th>
+                            </tr>
+                        </thread>
+                        <tbody>
+                        <tr>
+                            <td>
+                                감사합니다
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                금액 : <strong>\{{ total }}</strong>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <div class="t-mx-auto">
+                        <a href="" class="btn btn-secondary btn-block">쇼핑 계속하기</a>
+                    </div>
+                </div>
+
                     <a class="btn btn-success" href="#">구매</a>
                 </div>
 
